# git-mob

./: .gitignore  Cargo.toml  LICENSE  README.md  azure-pipelines.yaml
src/: cli.yaml  main.rs
tests/: cli.rs
