[package]
name = "git-mob"
version = "0.1.0"
authors = ["James Thompson <james@thomps.onl>"]
license = "MIT"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
git2 = "0.10"
clap = { version = "2.33.0", features = ["yaml"] }
assert_cmd = "0.11"
predicates = "1.0.2"
